--- a/assets/css/cust.css
+++ b/assets/css/cust.css
@@ -61,6 +61,18 @@ ol {
   width: 40px;
   height: 40px;
 }
+/* 모달 스타일 */
+.modal {
+  background: rgba(0, 0, 0, 0.8);
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.modal .modal-content {
+  position: absolute;
+  top: 40% !important;
+  left: 50%;
+}
 /* 배지 */
 .bedge {
   margin-left: 5px;
@@ -78,6 +90,15 @@ ol {
 .bedge-vi {
   background-color: #f6f5ff;
   color: #a37cf9;
+}
+.badge_btn_3 {
+  font-size: 11px;
+  font-weight: 700;
+  background: #e6f8ff;
+  display: inline-block;
+  border-radius: 2px;
+  padding: 5px 17px;
+  color: #0893c8;
 }
 /* toggle switch */
 .toggle,
@@ -311,4 +332,8 @@ section article {
 }
 .order-info li:not(:last-child) {
   border-right: 1px solid #eeeeee;
+}
+.sub-cont .au-card input {
+  transform: translateY(-30px);
+  height: 34px;
 }
