--- a/assets/css/join.css
+++ b/assets/css/join.css
@@ -20,6 +20,9 @@ body {
   font-size: 12px;
   font-family: "Noto Sans KR", sans-serif !important;
 }
+.down {
+  display: none;
+}
 .container {
   position: absolute;
   top: 50%;
@@ -177,4 +180,56 @@ form .signup-link a:hover {
 }
 .data p {
   font-size: 0.6rem;
+}
+/* 모바일 버전 */
+@media (max-width: 767px) {
+  .container {
+    width: 300px;
+  }
+  .login-bg {
+    display: none;
+  }
+  .container .login-form {
+    width: 100%;
+  }
+  .down {
+    display: block;
+    position: absolute;
+    width: 340px;
+    top: 100%;
+    left: 0;
+    margin-top: 20px;
+    padding: 20px;
+    text-indent: 10px;
+    text-align: left;
+    font-size: 0.9rem;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    transform: translateX(-5px);
+    cursor: pointer;
+  }
+  .down .down-light {
+    background: linear-gradient(to top, #91c6ff 40%, transparent 40%);
+  }
+  .down i {
+    font-weight: bold;
+    float: right;
+    color: rgb(90, 90, 90);
+  }
+  .down .none-text {
+    display: none;
+    color: #0099ff;
+    font-size: 0.8rem;
+    margin-top: 20px;
+    line-height: 30px;
+  }
+  .down .none-text .moreBtn {
+    font-size: 0.2rem;
+    margin-left: 5px;
+    padding: 2px 8px;
+    background-color: #fff;
+    color: #858585;
+    border-radius: 20px;
+    border: 1px solid #858585;
+  }
 }
